k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: java
